feat: aggiunta possibilità di fare click su una task per renderla completata se non lo era e viceversa

--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
-.done {
-    text-decoration: line-through;
+.task {
+    cursor: pointer;
+
+    &.done {
+        text-decoration: line-through;
+    }
 }
